Fix for seq2seq
- Fix tensorflow version
- Add locales package
- Generate locale file for fixing encoding issue

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -23,6 +23,7 @@ RUN echo "deb http://archive.ubuntu.com/ubuntu trusty-backports main restricted 
                        liblapack-dev \
                        libsdl2-dev \
                        libboost-all-dev \
+                       locales \
                        graphviz \
                        gcc \
                        g++ && \
@@ -39,9 +40,10 @@ RUN pip install --upgrade pip==9.0.3 && \
                            https://github.com/Theano/Theano/archive/master.zip \
                            https://github.com/Lasagne/Lasagne/archive/master.zip \
                            https://github.com/yandexdataschool/AgentNet/archive/master.zip \
-                           tensorflow \
+                           tensorflow==1.13.1 \
                            http://download.pytorch.org/whl/cu80/torch-0.3.0.post4-cp27-cp27mu-linux_x86_64.whl \
                            torchvision \
+                           editdistance \
                            keras
                            
 RUN pip install --upgrade  gym_pull ppaquette-gym-doom
@@ -60,14 +62,19 @@ RUN pip3 install --upgrade pip==9.0.3 && \
                            https://github.com/yandexdataschool/AgentNet/archive/master.zip \
                            http://download.pytorch.org/whl/cu80/torch-0.3.0.post4-cp35-cp35m-linux_x86_64.whl \
                            torchvision \
-                           tensorflow \
+                           tensorflow==1.13.1 \
+                           editdistance \
                            keras && \                           
     python3 -m ipykernel.kernelspec
 
+RUN export LC_ALL=en_US.UTF-8
+RUN export LANG=en_US.UTF-8
+RUN locale-gen en_US.UTF-8
 
 EXPOSE 8888
 VOLUME /notebooks
 WORKDIR /notebooks
 
+ENV LANG en_US.UTF-8
 COPY run_jupyter.sh /
 CMD ["/run_jupyter.sh"]
